force-app/main/default/objects/LWR_Audience_Page_Level_Rule_Priority__mdt/fields/Audience_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Audience_Rule_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Audience rule unique identifier. Page level</description>
    <inlineHelpText>Audience rule unique identifier. Page level</inlineHelpText>
    <label>Audience Rule Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>