force-app/main/default/objects/LWR_Audience_Page_Level_Rule_Priority__mdt/fields/Audience_Rule_Priority__c.field-meta.xml
<CustomField>
    <fullName>Audience_Rule_Priority__c</fullName>
    <description>The number indicating priority of the Page level Audience group. Smaller number means higher priority</description>
    <inlineHelpText>The number indicating priority of the Page level Audience group. Smaller number means higher priority</inlineHelpText>
    <label>Audience Rule Priority</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>