force-app/main/default/objects/LWR_Audience_Page_Level_Rule_Priority__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
                <default>true</default>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>SalesPlayTemplate__c</fullName>
            </value>
            <value>
                <fullName>ImportOpportunity__c</fullName>
            </value>
            <value>
                <fullName>SalesPlay__c</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>FulfillmentLineItem__c</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>PP_LeadStatusTracker__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>